--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@tanstack/react-query": "^5.66.0",
     "aos": "^3.0.0-beta.6",
+    "framer-motion": "^12.3.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
